[package]
name = "rust-ttapi"
version = "0.1.0"
authors = ["Alain Gilbert <alain.gilbert.15@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
log = "0.4.14"
env_logger = "0.8.3"
serde = { version = "1.0.125", features = ["derive"] }
lazy_static = "1.4.0"
websocket = "0.24.0"
serde_json = "1.0"
futures = "0.3.13"
futures-channel = "0.3.13"
tokio = { version = "1", features = ["full"] }
url = "2.2.1"
regex = "1"
futures-util = { version = "0.3", default-features = false, features = ["async-await", "sink", "std"] }
tungstenite = { version = "0.13.0" }
tokio-tungstenite = { version = "0.14.0" }
async-tungstenite = { version = "0.13.1", features = ["tokio-runtime", "tokio-native-tls", "tokio-rustls", "tokio-openssl", "async-tls", "async-std-runtime"] }
async-std = "1.9.0"